applications/budgeting/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: budgeting
  namespace: budgeting
spec:
  type: ClusterIP
  selector:
    app: budgeting
  ports:
    - name: web
      port: 3000
      targetPort: 3000
      protocol: TCP
